<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blank_bg"
    tools:context=".ui.SettingsActivity">

    <TextView
        android:id="@+id/difficultyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="150dp"
        android:text="@string/level_rb"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="28sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/levelRBGroup"
        android:orientation='horizontal'
        android:layout_marginLeft="50dp"
        android:layout_marginTop="150dp"
        app:layout_constraintLeft_toRightOf="@id/difficultyTextView"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/levelEasyRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_easy_rb"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="28sp" />

        <RadioButton
            android:id="@+id/levelMediumRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_medium_rb"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="28sp" />

        <RadioButton
            android:id="@+id/levelHardRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_hard_rb"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="28sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/startGameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="250dp"
        android:text="@string/start_rb"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="28sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startGameRBGroup"
        android:orientation='horizontal'
        android:layout_marginLeft="50dp"
        android:layout_marginTop="250dp"
        app:layout_constraintLeft_toRightOf="@id/startGameTextView"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/yesRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_yes_rb"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="28sp" />

        <RadioButton
            android:id="@+id/noRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_no_rb"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="28sp" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>